tests/lang/errors/fault_index_list.hawk
//! spec: fault-index
//! mode: run

fn main() -> Int {
    let xs = [1, 2, 3];
    // Indexing past the end traps (aborts with a non-zero exit).
    let x = xs[9];   // expect trap: IndexOutOfBounds
    println('${x}');
    return 0;
}
